feat: Add a link to honey-glazed-chicken.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <body>
         <h1>Odin recipes</h1>
+
+        <a href="./pages/honey-glazed-chicken.html" target="_blank">Honey glazed chicken</a>
     </body>
 
 </html>
