--- a/pages/honey-glazed-chicken.html
+++ b/pages/honey-glazed-chicken.html
@@ -8,6 +8,7 @@
 
     <body>
         <h1>Honey glazed chicken</h1>
+        <img src="../image/honey-glazed-chicken.png" alt="honey-glazed-chicken">
     </body>
 
 </html>
