--- a/pages/honey-glazed-chicken.html
+++ b/pages/honey-glazed-chicken.html
@@ -9,6 +9,9 @@
     <body>
         <h1>Honey glazed chicken</h1>
         <img src="../image/honey-glazed-chicken.png" alt="honey-glazed-chicken">
+        <h3>Description:</h3>
+        <p>This honey chicken recipe was given to me by a friend. I've used this recipe for years, and my family
+            requests it often. It's a light meal that everyone will enjoy. Serve with steamed rice</p>
     </body>
 
 </html>
