--- a/pages/honey-glazed-chicken.html
+++ b/pages/honey-glazed-chicken.html
@@ -12,6 +12,14 @@
         <h3>Description:</h3>
         <p>This honey chicken recipe was given to me by a friend. I've used this recipe for years, and my family
             requests it often. It's a light meal that everyone will enjoy. Serve with steamed rice</p>
+        <h3>Ingredient:</h3>
+        <ul>
+            <li><sup>1</sup>/<sub>4</sub> cup honey</li>
+            <li>2 tablespoons soy sauce</li>
+            <li><sup>1</sup>/<sub>8</sub> teaspoon red pepper flakes</li>
+            <li>1<sup>1</sup>/<sub>2</sub> tablespoons olive oil</li>
+            <li>2 skinless, boneless chicken breast halves, cut into bite-size pieces</li>
+        </ul>
     </body>
 
 </html>
