--- a/pages/smoked-chicken-drumsticks.html
+++ b/pages/smoked-chicken-drumsticks.html
@@ -8,6 +8,7 @@
 
     <body>
         <h1>Smoked chicken drumsticks</h1>
+        <img src="../image/smoked-chiken-drumsticks.png" alt="Smoked chicken drumsticks">
     </body>
 
 </html>
