feat: Add ingredient for smoked-chicken-drumsticks.html

--- a/pages/smoked-chicken-drumsticks.html
+++ b/pages/smoked-chicken-drumsticks.html
@@ -14,6 +14,12 @@
             but maple is also a great choice. Use your favorite BBQ rub. Letting the legs air-dry in the refrigerator
             overnight, combined with a higher smoking temperature, helps prevent rubbery skin that is common when
             smoking chicken. Serve with your favorite BBQ sauce, if desired.</p>
+        <h3>Ingredient:</h3>
+        <ul>
+            <li>12 chicken drumsticks</li>
+            <li><sup>1</sup>/<sub>4</sub>cup vegetable oil, or as needed</li>
+            <li><sup>1</sup>/<sub>3</sub>cup BBQ rub</li>
+        </ul>
     </body>
 
 </html>
