feat: Add new link in index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>Odin recipes</h1>
         <hr>
         <a href="./pages/honey-glazed-chicken.html" target="_blank">Honey glazed chicken</a>
+        <a href="./pages/smoked-chicken-drumsticks.html" target="_blank">Smoked chicken drumsticks</a>
     </body>
 
 </html>
