fix: Recipes is now in newline each
This change was make to improve the look of the recipes list

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <body>
         <h1>Odin recipes</h1>
         <hr>
-        <a href="./pages/honey-glazed-chicken.html" target="_blank">Honey glazed chicken</a>
-        <a href="./pages/smoked-chicken-drumsticks.html" target="_blank">Smoked chicken drumsticks</a>
+        <ul>
+            <li> <a href="./pages/smoked-chicken-drumsticks.html" target="_blank">Smoked chicken drumsticks</a> </li>
+            <li> <a href="./pages/honey-glazed-chicken.html" target="_blank">Honey glazed chicken</a> </li>
+        </ul>
     </body>
 
 </html>
