--- a/pages/crispy-chicken.html
+++ b/pages/crispy-chicken.html
@@ -8,6 +8,7 @@
 
     <body>
         <h1>Crispy chicken</h1>
+        <img src="../image/crispy-chicken.png" alt="Crispy chicken">
     </body>
 
 </html>
