feat: Add description in cripsy-chickne.html

--- a/pages/crispy-chicken.html
+++ b/pages/crispy-chicken.html
@@ -9,6 +9,8 @@
     <body>
         <h1>Crispy chicken</h1>
         <img src="../image/crispy-chicken.png" alt="Crispy chicken">
+        <h3>Description:</h3>
+        <p>This crispy baked chicken recipe is an easy way to have the texture of fried chicken but with baking.</p>
     </body>
 
 </html>
