feat: Add ingredient in crispy-chicken.html

--- a/pages/crispy-chicken.html
+++ b/pages/crispy-chicken.html
@@ -11,6 +11,13 @@
         <img src="../image/crispy-chicken.png" alt="Crispy chicken">
         <h3>Description:</h3>
         <p>This crispy baked chicken recipe is an easy way to have the texture of fried chicken but with baking.</p>
+        <h3>Ingredient:</h3>
+        <ul>
+            <li>2 cups crushed saltine crackers</li>
+            <li>1 teaspoon seasoned salt</li>
+            <li>6 skinless, boneless chicken breast halves</li>
+            <li><sup>1</sup>/<sub>2</sub>cup margarine, melted</li>
+        </ul>
     </body>
 
 </html>
