feat: Add steps in crispy-chicken.html

--- a/pages/crispy-chicken.html
+++ b/pages/crispy-chicken.html
@@ -18,6 +18,16 @@
             <li>6 skinless, boneless chicken breast halves</li>
             <li><sup>1</sup>/<sub>2</sub>cup margarine, melted</li>
         </ul>
+        <h3>Steps:</h3>
+        <ol>
+            <li>Preheat the oven to 425 degrees F (220 degrees C). Grease a large baking dish. </li>
+            <li>Mix together crushed crackers, seasoned salt, and garlic powder in a shallow bowl. </li>
+            <li> Dip chicken breasts into melted margarine, then press into cracker mixture until coated. Arrange
+                chicken in the prepared baking dish. </li>
+            <li>Bake in the preheated oven until chicken breasts are no longer pink in the center and the juices run
+                clear, 45 to 60 minutes. An instant-read thermometer inserted into the center should read at least 165
+                degrees F (75 degrees C). </li>
+        </ol>
     </body>
 
 </html>
