feat: Add link to cripsy-chicken.html in index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li> <a href="./pages/smoked-chicken-drumsticks.html" target="_blank">Smoked chicken drumsticks</a> </li>
             <li> <a href="./pages/honey-glazed-chicken.html" target="_blank">Honey glazed chicken</a> </li>
+            <li><a href="./pages/crispy-chicken.html" target="_blank">Crispy chicken</a></li>
         </ul>
     </body>
 
