feat(navbar): Add navbar

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <head>
         <title>Home page</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin recipes</h1>
-        <hr>
+        <nav class="navbar">
+            <a href="index.html" class="navbar__home">
+                <h1>Odin recipes</h1>
+            </a>
+        </nav>
         <ul>
             <li> <a href="./pages/smoked-chicken-drumsticks.html" target="_blank">Smoked chicken drumsticks</a> </li>
             <li> <a href="./pages/honey-glazed-chicken.html" target="_blank">Honey glazed chicken</a> </li>
