--- a/pages/honey-glazed-chicken.html
+++ b/pages/honey-glazed-chicken.html
@@ -4,9 +4,16 @@
     <head>
         <title>Honey glazed chicken</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
+
     </head>
 
     <body>
+        <nav class="navbar">
+            <a href="../index.html" class="navbar__home">
+                <h1>Odin recipes</h1>
+            </a>
+        </nav>
         <h1>Honey glazed chicken</h1>
         <img src="../image/honey-glazed-chicken.png" alt="honey-glazed-chicken">
         <hr>
