--- a/pages/smoked-chicken-drumsticks.html
+++ b/pages/smoked-chicken-drumsticks.html
@@ -4,9 +4,15 @@
     <head>
         <title>Smoked chicken drumsticks</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
+        <nav class="navbar">
+            <a href="../index.html" class="navbar__home">
+                <h1>Odin recipes</h1>
+            </a>
+        </nav>
         <h1>Smoked chicken drumsticks</h1>
         <img src="../image/smoked-chiken-drumsticks.png" alt="Smoked chicken drumsticks">
         <hr>
