--- a/pages/crispy-chicken.html
+++ b/pages/crispy-chicken.html
@@ -4,9 +4,16 @@
     <head>
         <title>Crispy chicken</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
+
     </head>
 
     <body>
+        <nav class="navbar">
+            <a href="../index.html" class="navbar__home">
+                <h1>Odin recipes</h1>
+            </a>
+        </nav>
         <h1>Crispy chicken</h1>
         <img src="../image/crispy-chicken.png" alt="Crispy chicken">
         <hr>
