refactor: Change link to now open in self
Previously it would open link in new tab

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             </a>
         </nav>
         <ul>
-            <li> <a href="./pages/smoked-chicken-drumsticks.html" target="_blank">Smoked chicken drumsticks</a> </li>
-            <li> <a href="./pages/honey-glazed-chicken.html" target="_blank">Honey glazed chicken</a> </li>
-            <li><a href="./pages/crispy-chicken.html" target="_blank">Crispy chicken</a></li>
+            <li> <a href="./pages/smoked-chicken-drumsticks.html">Smoked chicken drumsticks</a> </li>
+            <li> <a href="./pages/honey-glazed-chicken.html">Honey glazed chicken</a> </li>
+            <li><a href="./pages/crispy-chicken.html">Crispy chicken</a></li>
         </ul>
     </body>
 
