feat: Change layout of food

--- a/pages/crispy-chicken.html
+++ b/pages/crispy-chicken.html
@@ -14,11 +14,12 @@
                 <h1>Odin recipes</h1>
             </a>
         </nav>
-        <h1>Crispy chicken</h1>
-        <img src="../image/crispy-chicken.png" alt="Crispy chicken">
-        <hr>
-        <h3>Description:</h3>
-        <p>This crispy baked chicken recipe is an easy way to have the texture of fried chicken but with baking.</p>
+        <div class="food margin">
+            <h1 class="food__title">Crispy chicken</h1>
+            <img src="../image/crispy-chicken.png" alt="Crispy chicken" class="food__image">
+            <p class="food__description">This crispy baked chicken recipe is an easy way to have the texture of fried
+                chicken but with baking.</p>
+        </div>
         <h3>Ingredient:</h3>
         <ul>
             <li>2 cups crushed saltine crackers</li>
