--- a/pages/smoked-chicken-drumsticks.html
+++ b/pages/smoked-chicken-drumsticks.html
@@ -13,14 +13,14 @@
                 <h1>Odin recipes</h1>
             </a>
         </nav>
-        <h1>Smoked chicken drumsticks</h1>
-        <img src="../image/smoked-chiken-drumsticks.png" alt="Smoked chicken drumsticks">
-        <hr>
-        <h3>Description:</h3>
-        <p> These smoked chicken legs are so versatile and easy! I like to use apple wood chips or other fruit woods,
-            but maple is also a great choice. Use your favorite BBQ rub. Letting the legs air-dry in the refrigerator
-            overnight, combined with a higher smoking temperature, helps prevent rubbery skin that is common when
-            smoking chicken. Serve with your favorite BBQ sauce, if desired.</p>
+        <div class="food">
+            <h1 class="food__title">Smoked chicken drumsticks</h1>
+            <img src="../image/smoked-chiken-drumsticks.png" alt="Smoked chicken drumsticks" class="food__image">
+            <p class="food__description"> These smoked chicken legs are so versatile and easy! I like to use apple wood
+                chips or other fruit woods, but maple is also a great choice. Use your favorite BBQ rub. Letting the
+                legs air-dry in the refrigerator overnight, combined with a higher smoking temperature, helps prevent
+                rubbery skin that is common when smoking chicken. Serve with your favorite BBQ sauce, if desired.</p>
+        </div>
         <h3>Ingredient:</h3>
         <ul>
             <li>12 chicken drumsticks</li>
