--- a/pages/honey-glazed-chicken.html
+++ b/pages/honey-glazed-chicken.html
@@ -14,12 +14,13 @@
                 <h1>Odin recipes</h1>
             </a>
         </nav>
-        <h1>Honey glazed chicken</h1>
-        <img src="../image/honey-glazed-chicken.png" alt="honey-glazed-chicken">
-        <hr>
-        <h3>Description:</h3>
-        <p>This honey chicken recipe was given to me by a friend. I've used this recipe for years, and my family
-            requests it often. It's a light meal that everyone will enjoy. Serve with steamed rice</p>
+        <nav class="food">
+            <h1 class="food__title">Honey glazed chicken</h1>
+            <img src="../image/honey-glazed-chicken.png" alt="honey-glazed-chicken" class="food__image">
+            <p class="food__description">This honey chicken recipe was given to me by a friend. I've used this recipe
+                for years, and my family requests it often. It's a light meal that everyone will enjoy. Serve with
+                steamed rice</p>
+        </nav>
         <h3>Ingredient:</h3>
         <ul>
             <li><sup>1</sup>/<sub>4</sub> cup honey</li>
