style(navbar): Make navbar better with margin
Make navbar look connected to food section by changing margin, and
make navbar less bulky by changing padding

--- a/pages/honey-glazed-chicken.html
+++ b/pages/honey-glazed-chicken.html
@@ -10,8 +10,8 @@
 
     <body>
         <nav class="navbar">
-            <a href="../index.html" class="navbar__home">
-                <h1>Odin recipes</h1>
+            <a href="../index.html" class="navbar__link">
+                <h1 class="navbar__home">Odin recipes</h1>
             </a>
         </nav>
         <nav class="food">
