style(info): Add style to info section

--- a/pages/smoked-chicken-drumsticks.html
+++ b/pages/smoked-chicken-drumsticks.html
@@ -21,23 +21,27 @@
                 legs air-dry in the refrigerator overnight, combined with a higher smoking temperature, helps prevent
                 rubbery skin that is common when smoking chicken. Serve with your favorite BBQ sauce, if desired.</p>
         </div>
-        <h3>Ingredient:</h3>
-        <ul>
-            <li>12 chicken drumsticks</li>
-            <li><sup>1</sup>/<sub>4</sub>cup vegetable oil, or as needed</li>
-            <li><sup>1</sup>/<sub>3</sub>cup BBQ rub</li>
-        </ul>
-        <h3>Steps:</h3>
-        <ol>
-            <li>Place drumsticks on a rack over a drip tray or baking sheet. Air-dry in the refrigerator, 8 hours to
-                overnight. </li>
-            <li>Preheat an electric smoker to 275 degrees F (135 degrees C) and add wood chips according to
-                manufacturer's instructions. </li>
-            <li>Brush drumsticks lightly with vegetable oil. Place drumsticks in a resealable plastic bag and sprinkle
-                with the rub. Toss to coat evenly. </li>
-            <li>Place drumsticks on the rack in the smoker. Smoke until chicken has reached an internal temperature of
-                165 degrees F (74 degrees C), about 2 hours. </li>
-        </ol>
+        <div class="info">
+            <h3 class="info__title">Ingredient:</h3>
+            <ul>
+                <li>12 chicken drumsticks</li>
+                <li><sup>1</sup>/<sub>4</sub>cup vegetable oil, or as needed</li>
+                <li><sup>1</sup>/<sub>3</sub>cup BBQ rub</li>
+            </ul>
+            <h3 class="info__title">Steps:</h3>
+            <ol>
+                <li>Place drumsticks on a rack over a drip tray or baking sheet. Air-dry in the refrigerator, 8 hours to
+                    overnight. </li>
+                <li>Preheat an electric smoker to 275 degrees F (135 degrees C) and add wood chips according to
+                    manufacturer's instructions. </li>
+                <li>Brush drumsticks lightly with vegetable oil. Place drumsticks in a resealable plastic bag and
+                    sprinkle
+                    with the rub. Toss to coat evenly. </li>
+                <li>Place drumsticks on the rack in the smoker. Smoke until chicken has reached an internal temperature
+                    of
+                    165 degrees F (74 degrees C), about 2 hours. </li>
+            </ol>
+        </div>
     </body>
 
 </html>
