--- a/pages/crispy-chicken.html
+++ b/pages/crispy-chicken.html
@@ -20,23 +20,26 @@
             <p class="food__description">This crispy baked chicken recipe is an easy way to have the texture of fried
                 chicken but with baking.</p>
         </div>
-        <h3>Ingredient:</h3>
-        <ul>
-            <li>2 cups crushed saltine crackers</li>
-            <li>1 teaspoon seasoned salt</li>
-            <li>6 skinless, boneless chicken breast halves</li>
-            <li><sup>1</sup>/<sub>2</sub>cup margarine, melted</li>
-        </ul>
-        <h3>Steps:</h3>
-        <ol>
-            <li>Preheat the oven to 425 degrees F (220 degrees C). Grease a large baking dish. </li>
-            <li>Mix together crushed crackers, seasoned salt, and garlic powder in a shallow bowl. </li>
-            <li> Dip chicken breasts into melted margarine, then press into cracker mixture until coated. Arrange
-                chicken in the prepared baking dish. </li>
-            <li>Bake in the preheated oven until chicken breasts are no longer pink in the center and the juices run
-                clear, 45 to 60 minutes. An instant-read thermometer inserted into the center should read at least 165
-                degrees F (75 degrees C). </li>
-        </ol>
+        <div class="info">
+            <h3 class="info__title">Ingredient:</h3>
+            <ul>
+                <li>2 cups crushed saltine crackers</li>
+                <li>1 teaspoon seasoned salt</li>
+                <li>6 skinless, boneless chicken breast halves</li>
+                <li><sup>1</sup>/<sub>2</sub>cup margarine, melted</li>
+            </ul>
+            <h3 class="info__title">Steps:</h3>
+            <ol>
+                <li>Preheat the oven to 425 degrees F (220 degrees C). Grease a large baking dish. </li>
+                <li>Mix together crushed crackers, seasoned salt, and garlic powder in a shallow bowl. </li>
+                <li> Dip chicken breasts into melted margarine, then press into cracker mixture until coated. Arrange
+                    chicken in the prepared baking dish. </li>
+                <li>Bake in the preheated oven until chicken breasts are no longer pink in the center and the juices run
+                    clear, 45 to 60 minutes. An instant-read thermometer inserted into the center should read at least
+                    165
+                    degrees F (75 degrees C). </li>
+            </ol>
+        </div>
     </body>
 
 </html>
