--- a/pages/honey-glazed-chicken.html
+++ b/pages/honey-glazed-chicken.html
@@ -21,22 +21,25 @@
                 for years, and my family requests it often. It's a light meal that everyone will enjoy. Serve with
                 steamed rice</p>
         </nav>
-        <h3>Ingredient:</h3>
-        <ul>
-            <li><sup>1</sup>/<sub>4</sub> cup honey</li>
-            <li>2 tablespoons soy sauce</li>
-            <li><sup>1</sup>/<sub>8</sub> teaspoon red pepper flakes</li>
-            <li>1<sup>1</sup>/<sub>2</sub> tablespoons olive oil</li>
-            <li>2 skinless, boneless chicken breast halves, cut into bite-size pieces</li>
-        </ul>
-        <h3>Steps:</h3>
-        <ol>
-            <li>put whisky honey, soy sauce, and red pepper flakes in bowl.</li>
-            <li>Heat olive oil in a skillet over medium heat; cook and stir chicken in hot oil until lightly brown,
-                about 5 minutes.</li>
-            <li>Pour honey mixture into the skillet; continue to cook and stir until chicken is no longer pink in the
-                center and sauce is thickened, about 5 minutes more. </li>
-        </ol>
+        <div class="info">
+            <h3 class="info__title">Ingredient:</h3>
+            <ul>
+                <li><sup>1</sup>/<sub>4</sub> cup honey</li>
+                <li>2 tablespoons soy sauce</li>
+                <li><sup>1</sup>/<sub>8</sub> teaspoon red pepper flakes</li>
+                <li>1<sup>1</sup>/<sub>2</sub> tablespoons olive oil</li>
+                <li>2 skinless, boneless chicken breast halves, cut into bite-size pieces</li>
+            </ul>
+            <h3 class="info__title">Steps:</h3>
+            <ol>
+                <li>put whisky honey, soy sauce, and red pepper flakes in bowl.</li>
+                <li>Heat olive oil in a skillet over medium heat; cook and stir chicken in hot oil until lightly brown,
+                    about 5 minutes.</li>
+                <li>Pour honey mixture into the skillet; continue to cook and stir until chicken is no longer pink in
+                    the
+                    center and sauce is thickened, about 5 minutes more. </li>
+            </ol>
+        </div>
     </body>
 
 </html>
