refactor: Delete unnecessary new line

--- a/pages/crispy-chicken.html
+++ b/pages/crispy-chicken.html
@@ -36,8 +36,7 @@
                     chicken in the prepared baking dish. </li>
                 <li>Bake in the preheated oven until chicken breasts are no longer pink in the center and the juices run
                     clear, 45 to 60 minutes. An instant-read thermometer inserted into the center should read at least
-                    165
-                    degrees F (75 degrees C). </li>
+                    165 degrees F (75 degrees C). </li>
             </ol>
         </div>
     </body>
