--- a/pages/honey-glazed-chicken.html
+++ b/pages/honey-glazed-chicken.html
@@ -36,8 +36,7 @@
                 <li>Heat olive oil in a skillet over medium heat; cook and stir chicken in hot oil until lightly brown,
                     about 5 minutes.</li>
                 <li>Pour honey mixture into the skillet; continue to cook and stir until chicken is no longer pink in
-                    the
-                    center and sauce is thickened, about 5 minutes more. </li>
+                    the center and sauce is thickened, about 5 minutes more. </li>
             </ol>
         </div>
     </body>
