--- a/pages/smoked-chicken-drumsticks.html
+++ b/pages/smoked-chicken-drumsticks.html
@@ -38,8 +38,7 @@
                     sprinkle
                     with the rub. Toss to coat evenly. </li>
                 <li>Place drumsticks on the rack in the smoker. Smoke until chicken has reached an internal temperature
-                    of
-                    165 degrees F (74 degrees C), about 2 hours. </li>
+                    of 165 degrees F (74 degrees C), about 2 hours. </li>
             </ol>
         </div>
     </body>
