--- a/pages/crispy-chicken.html
+++ b/pages/crispy-chicken.html
@@ -14,9 +14,9 @@
                 <h1 class="navbar__home">Odin recipes</h1>
             </a>
         </nav>
-        <div class="food margin">
-            <h1 class="food__title">Crispy chicken</h1>
+        <div class="food">
             <img src="../image/crispy-chicken.png" alt="Crispy chicken" class="food__image">
+            <h1 class="food__title">Crispy chicken</h1>
             <p class="food__description">This crispy baked chicken recipe is an easy way to have the texture of fried
                 chicken but with baking.</p>
         </div>
