style: Revamp navbar using flex box

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     </head>
 
     <body>
-        <nav class="navbar">
-            <a href="index.html" class="navbar__link">
-                <h1 class="navbar__home">Odin recipes</h1>
-            </a>
+        <nav class="navbar-container">
+            <div class="navbar">
+                <a href="index.html" class="navbar__link">
+                    <h1 class="navbar__link--home">Odin recipes</h1>
+                </a>
+                <div class="navbar__link">
+                    <a href="#" class="navbar__link--list">breakfast</a>
+                    <a href="#" class="navbar__link--list">lunch</a>
+                    <a href="#" class="navbar__link--list">dinner</a>
+                </div>
+            </div>
         </nav>
         <ul>
             <li> <a href="./pages/smoked-chicken-drumsticks.html">Smoked chicken drumsticks</a> </li>
