refactor: Change navbar

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
     <body>
         <nav class="navbar-container">
             <div class="navbar">
-                <a href="index.html" class="navbar__link">
-                    <h1 class="navbar__link--home">Odin recipes</h1>
-                </a>
-                <div class="navbar__link">
-                    <a href="#" class="navbar__link--list">breakfast</a>
-                    <a href="#" class="navbar__link--list">lunch</a>
-                    <a href="#" class="navbar__link--list">dinner</a>
+                <a href="index.html" class="navbar__link">Odin recipes</a>
+                <div>
+                    <a href="#" class="navbar__link">breakfast</a>
+                    <a href="#" class="navbar__link">lunch</a>
+                    <a href="#" class="navbar__link">dinner</a>
                 </div>
             </div>
         </nav>
