feat: Add nav to every pages

--- a/pages/crispy-chicken.html
+++ b/pages/crispy-chicken.html
@@ -9,10 +9,15 @@
     </head>
 
     <body>
-        <nav class="navbar">
-            <a href="../index.html" class="navbar__link">
-                <h1 class="navbar__home">Odin recipes</h1>
-            </a>
+        <nav class="navbar-container">
+            <div class="navbar">
+                <a href="../index.html" class="navbar__link">Odin recipes</a>
+                <div>
+                    <a href="#" class="navbar__link">breakfast</a>
+                    <a href="#" class="navbar__link">lunch</a>
+                    <a href="#" class="navbar__link">dinner</a>
+                </div>
+            </div>
         </nav>
         <div class="food">
             <img src="../image/crispy-chicken.png" alt="Crispy chicken" class="food__image">
