--- a/pages/honey-glazed-chicken.html
+++ b/pages/honey-glazed-chicken.html
@@ -19,13 +19,13 @@
                 </div>
             </div>
         </nav>
-        <nav class="food">
+        <div class="food">
             <img src="../image/honey-glazed-chicken.png" alt="honey-glazed-chicken" class="food__image">
             <h1 class="food__title">Honey glazed chicken</h1>
             <p class="food__description">This honey chicken recipe was given to me by a friend. I've used this recipe
                 for years, and my family requests it often. It's a light meal that everyone will enjoy. Serve with
                 steamed rice</p>
-        </nav>
+        </div>
         <div class="info">
             <h3 class="info__title">Ingredient:</h3>
             <ul>
