--- a/pages/crispy-chicken.html
+++ b/pages/crispy-chicken.html
@@ -9,13 +9,13 @@
     </head>
 
     <body>
-        <nav class="navbar-container">
-            <div class="navbar">
-                <a href="../index.html" class="navbar__link">Odin recipes</a>
+        <nav class="nav-container">
+            <div class="nav">
+                <a href="../index.html" class="nav__link">Odin recipes</a>
                 <div>
-                    <a href="#" class="navbar__link">breakfast</a>
-                    <a href="#" class="navbar__link">lunch</a>
-                    <a href="#" class="navbar__link">dinner</a>
+                    <a href="#" class="nav__link food-link">Breakfast</a>
+                    <a href="#" class="nav__link food-link">Lunch</a>
+                    <a href="#" class="nav__link food-link">Dinner</a>
                 </div>
             </div>
         </nav>
