style: Revamp food list

--- a/index.html
+++ b/index.html
@@ -18,11 +18,45 @@
                 </div>
             </div>
         </nav>
-        <ul>
-            <li> <a href="./pages/smoked-chicken-drumsticks.html">Smoked chicken drumsticks</a> </li>
-            <li> <a href="./pages/honey-glazed-chicken.html">Honey glazed chicken</a> </li>
-            <li><a href="./pages/crispy-chicken.html">Crispy chicken</a></li>
-        </ul>
+        <div class="showcase">
+            <div class="showcase__food">
+                <a href="/pages/smoked-chicken-drumsticks.html" class="showcase__link">
+                    <h1 class="showcase__title">Smoked Chicken Drumsticks</h1>
+                    <div class="showcase__info">
+                        <img class="showcase__image" src="./image/smoked-chiken-drumsticks.png" alt="food image">
+                        <p class="showcase__description">These smoked chicken legs are so versatile and easy! I like to
+                            use apple wood chips or other fruit woods, but maple is also a great choice. Use your
+                            favorite BBQ rub.
+                            Letting the legs air-dry in the refrigerator overnight, combined with a higher smoking
+                            temperature, helps prevent rubbery skin that is common when smoking chicken. Serve with your
+                            favorite BBQ sauce, if desired.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="showcase__food">
+                <a href="/pages/crispy-chicken.html" class="showcase__link">
+                    <h1 class="showcase__title">Crispy Chicken</h1>
+                    <div class="showcase__info">
+                        <img class="showcase__image" src="./image/crispy-chicken.png" alt="food image">
+                        <p class="showcase__description">This crispy baked chicken recipe is an easy way to have the
+                            texture
+                            of fried chicken but with baking.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="showcase__food">
+                <a href="/pages/honey-glazed-chicken.html" class="showcase__link">
+                    <h1 class="showcase__title">Honey Glazed Chicken</h1>
+                    <div class="showcase__info">
+                        <img class="showcase__image" src="./image/honey-glazed-chicken.png" alt="food image">
+                        <p class="showcase__description">This honey chicken recipe was given to me by a friend. I've
+                            used this recipe
+                            for years, and my family requests it often. It's a light meal that everyone will enjoy.
+                            Serve with steamed rice</p>
+                    </div>
+                </a>
+            </div>
+        </div>
     </body>
 
 </html>
