--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
         <nav class="nav-container">
             <div class="nav">
                 <a href="#" class="nav__link">Odin recipes</a>
-                <div>
-                    <a href="#" class="nav__link food-link">Breakfast</a>
-                    <a href="#" class="nav__link food-link">Lunch</a>
-                    <a href="#" class="nav__link food-link">Dinner</a>
-                </div>
+                <a href="#" class="nav__link nav__link--margin-left">Breakfast</a>
+                <a href="#" class="nav__link ">Lunch</a>
+                <a href="#" class="nav__link ">Dinner</a>
             </div>
         </nav>
         <div class="showcase">
