fix: food detail link not working

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <div class="showcase">
             <div class="showcase__food">
-                <a href="/pages/smoked-chicken-drumsticks.html" class="showcase__link">
+                <a href="pages/smoked-chicken-drumsticks.html" class="showcase__link">
                     <h1 class="showcase__title">Smoked Chicken Drumsticks</h1>
                     <div class="showcase__info">
                         <img class="showcase__image" src="./image/smoked-chiken-drumsticks.png" alt="food image">
@@ -32,7 +32,7 @@
                 </a>
             </div>
             <div class="showcase__food">
-                <a href="/pages/crispy-chicken.html" class="showcase__link">
+                <a href="pages/crispy-chicken.html" class="showcase__link">
                     <h1 class="showcase__title">Crispy Chicken</h1>
                     <div class="showcase__info">
                         <img class="showcase__image" src="./image/crispy-chicken.png" alt="food image">
@@ -43,7 +43,7 @@
                 </a>
             </div>
             <div class="showcase__food">
-                <a href="/pages/honey-glazed-chicken.html" class="showcase__link">
+                <a href="pages/honey-glazed-chicken.html" class="showcase__link">
                     <h1 class="showcase__title">Honey Glazed Chicken</h1>
                     <div class="showcase__info">
                         <img class="showcase__image" src="./image/honey-glazed-chicken.png" alt="food image">
